--- a/0.0.0.indice.md
+++ b/0.0.0.indice.md
@@ -1,10 +1,13 @@
 # Curso de introducción a la impresión 3D
 
-http://bit.ly/3DPrimaria
+
 
 ### José Antonio Vacas @javacasm
 
 ![CCbySA](images/CCbySQ_88x31.png)
+
+[![Vídeo: Presentación del Curso de impresion 3D para todos](https://img.youtube.com/vi/Guk_qBg6fqc/0.jpg)](https://youtu.be/Guk_qBg6fqc)
+
 
 ## 0. [Introducción a la impresión 3D](./0.0.Introduccion3D.md)
 
