--- a/0.0.Introduccion3D.md
+++ b/0.0.Introduccion3D.md
@@ -1,24 +1,20 @@
 # Introducción al 3D
-¿Qué es una impresora 3D? 
-
-![proceso impresión](./images/3D-printing-process-chain.png)
-
-[Historia](./0.1.Historia.md)
-
-¿Qué podemos imprimir? [Aplicaciones](./0.2.Aplicaciones.md)
-
-[Tipos de impresoras](./0.3.Tecnologias3D.md)
-
-¿Con qué materiales podemos imprimir? [Filamentos](./4.0.Filamentos.md)
 
 [![Vídeo: 0.4 Tipos de filamentos para impresión 3D](https://img.youtube.com/vi/U1Eg8adggDg/0.jpg)](https://youtu.be/U1Eg8adggDg)
 
 [Vídeo: 0.4 Tipos de filamentos para impresión 3D](https://youtu.be/U1Eg8adggDg)
 
+¿Qué es una impresora 3D? 
 
-¿Cuánto cuesta una impresora? [Comprar una impresora](./0.4.ComprarImpresora3d.md)
+¿Qué es una impresora 3D?:
+Una impresora 3D es un dispositivo capaz de convertir en un objeto físico un modelo 3D que hemos creado en el ordenador.
 
-¿Cuánto cuesta el filamento? Unos 16-20€ el kilo. Un Among Us de 5cm de alto pesa unos 8g -> Podemos hacer 125 con un rollo -> 13 céntimos cada uno
 
-¿Siempre salen bien las impresiones? No, pero cuánto más imprimes mejor salen. [Fallos de impresón](./7.5.FallosImpresion.md)
+![Proceso de impresión](./images/3D-printing-process-chain.png)
+
+El proceso es siempre muy parecido, y lo repetiremos a lo largo del curso varias veces:
+1.  Partimos de un diseño que o bien hemos creado u obtenido de internet.
+2.  Generamos a partir de ese diseño un fichero de malla de puntos que denominamos fichero STL.Este fichero contiene un modelo simplificado del original.
+3. Usando un programa que llamamos laminador convertimos este fichero de malla de puntos en un conjunto de instrucciones para nuestro  modelo  concreto de impresora
+4. La impresora se encarga de ejecutar ese conjunto de instrucciones generando el objeto físico
 
