--- a/4.0.0.EstructuraImpresora3D.md
+++ b/4.0.0.EstructuraImpresora3D.md
@@ -18,6 +18,8 @@ La mayoría de la impresora también incluye un elemento una **base calefactada*
 
 ## Partes
 
+![](./images/EjesImpresora.png)
+
 ![1](./images/kikai1253.jpg)
 
 ![3](./images/prusai3.png)
