--- a/4.0.2.TiposExtrusores.md
+++ b/4.0.2.TiposExtrusores.md
@@ -69,9 +69,17 @@ TODO: explicar partes
 
 ![Titan + E3D v6](./images/titan+ev6.jpg)
 
+## Extrusor Unibody Bq
+
+![](./images/extrusorBQ.png)
+
+Extrusor compacto
+
+
 ## Bowden
 
 ![Bowden y extrusión directa](./images/extrusor-bowden-vs-directo-1024x633.png)
+
 
 
 
