--- a/6.3.Proyectos3D.md
+++ b/6.3.Proyectos3D.md
@@ -24,3 +24,12 @@ Proyecto multipiezas
 |Frame, Right.stl|1|0| 50% infill, Black Tough PLA.
 |Pawl.stl|1|0| 100% infill, Black Tough PLA.
 |Spring.stl|1|0| 100% infill, Black Tough PLA.
+
+Varias piezas por impresión: ventajas/incovenientes
+
+Juntando piezas de las mismas características 
+  
+
+Guardar proyectos con cura y prusaslicer
+
+repeticiones de impresiones 
