--- a/0.0.Impresion3DParaTodos.md
+++ b/0.0.Impresion3DParaTodos.md
@@ -10,7 +10,7 @@
 * Obtener piezas en distintos materiales para analizar tolerancias, retracciones y calibrado.
 * Uso y mantenimiento de un impresora 3D
 * Aprender las técnicas de diseño e impresión básicas para la realización de trabajos.
-* Conocer y utilizar el software para modelar objetos sencillos y complejos para su posterior impresión: Thinkercad, freecad y Sketchup
+* Conocer y utilizar el software para modelar objetos sencillos y complejos para su posterior impresión: Tinkercad, freecad y Sketchup
 
 ## Temario:
 
@@ -50,7 +50,7 @@
 * Calibraciones
 
 6. Mejorando la calidad de las impresiones
-* Optimzaciones de calidad
+* Optimizaciones de calidad
 * Optimización de velocidad
 * Impresiones de Gran Formato
 * Cajas para la impresora
