--- a/0.0.Introduccion3D.md
+++ b/0.0.Introduccion3D.md
@@ -1,18 +1,14 @@
 # Introducción al 3D
 
-[![Vídeo: 0.4 Tipos de filamentos para impresión 3D](https://img.youtube.com/vi/U1Eg8adggDg/0.jpg)](https://youtu.be/U1Eg8adggDg)
-
-[Vídeo: 0.4 Tipos de filamentos para impresión 3D](https://youtu.be/U1Eg8adggDg)
-
-¿Qué es una impresora 3D? 
-
 ¿Qué es una impresora 3D?:
-Una impresora 3D es un dispositivo capaz de convertir en un objeto físico un modelo 3D que hemos creado en el ordenador.
+
+*Una impresora 3D es un dispositivo capaz de convertir en un objeto físico un modelo 3D que hemos creado en el ordenador*.
 
 
 ![Proceso de impresión](./images/3D-printing-process-chain.png)
 
 El proceso es siempre muy parecido, y lo repetiremos a lo largo del curso varias veces:
+
 1.  Partimos de un diseño que o bien hemos creado u obtenido de internet.
 2.  Generamos a partir de ese diseño un fichero de malla de puntos que denominamos fichero STL.Este fichero contiene un modelo simplificado del original.
 3. Usando un programa que llamamos laminador convertimos este fichero de malla de puntos en un conjunto de instrucciones para nuestro  modelo  concreto de impresora
