--- a/0.2.Aplicaciones.md
+++ b/0.2.Aplicaciones.md
@@ -4,83 +4,106 @@
 
 [Vídeo: Aplicaciones de la impresión 3D](https://youtu.be/rx7sOvkTJaU)
 
+Realmente podemos decir que el número de aplicaciones de las impresoras 3D es prácticamente infinito.  en todos los campos permiten la realización de prototipos y la copia de pieza a las que no tenemos acceso para realizar una de estas copias solamente tenemos que realizar un diseño o bien escanear una pieza original.
+
+Vamos a ver algunos de estos ejemplos, en campos concretos, si bien te invito a que investigues por tu cuenta y encuentre muchas aplicaciones que ni siquiera hemos pensado que estaban disponibles a día de hoy.
+
+
 ## Aplicaciones escolares
 
 [Aparatos para el cole](https://www.thingiverse.com/javacasm/collections/cole)
 
-![ADN](https://cdn.thingiverse.com/renders/04/19/93/ee/b7/d2b5ca33bd970f64a6301fa75ae2eb22_preview_card.jpg)
 
-[Proyectos de ciencia](https://www.thingiverse.com/MakerBotLearning/collections/science-projects)
+Son muchos los diseños disponibles para fines educativos. Existen modelos de prácticamente cualquiera de los campos que se utilizan en el ámbito docente.  
+Especialmente existen modelos de aquellos conceptos un poco más complejos de entender, como puede ser por ejemplo la hélice del ADN, que tiene disponibles muchos modelos según tratemos de entender su estructura física o bien su composición química como podemos ver en los siguientes ejemplos:
 
-![globe](https://cdn.thingiverse.com/renders/30/e8/04/d6/6d/IMG_1895_Crop_preview_card.jpg)
 
-![DNA](https://cdn.thingiverse.com/renders/b3/30/1e/02/f9/1a99206dd09823bf94f50f0091af27cb_preview_card.JPG)
+![Hélice de la molécula del ADN](https://cdn.thingiverse.com/renders/04/19/93/ee/b7/d2b5ca33bd970f64a6301fa75ae2eb22_preview_card.jpg)
+
+
+![Estructura química del ADN](https://cdn.thingiverse.com/renders/b3/30/1e/02/f9/1a99206dd09823bf94f50f0091af27cb_preview_card.JPG)
+
+También son muchos los [Proyectos de ciencia](https://www.thingiverse.com/MakerBotLearning/collections/science-projects) disponibles para imprimir en todo tipo de Ciencias con pueden ser las ciencias naturales la geología o cualquiera de los ámbitos vamos a poder encontrar una representación esquemática de un corte de la tierra:
+
+![Corte de la estructura interna de la tierra](https://cdn.thingiverse.com/renders/30/e8/04/d6/6d/IMG_1895_Crop_preview_card.jpg)
+
+O de los diferentes tipos de células, como la célula animal:
 
 ![Cells](https://cdn.thingiverse.com/renders/cb/27/3c/11/fb/61d0922c1fe213079382f35dd90a4a82_preview_card.jpg)
 
+O la célula vegetal
+
 ![celula montable](https://thingiverse-production-new.s3.amazonaws.com/renders/31/87/51/87/f2/882eee1e76aaafc4e3609c0776acdadb_preview_featured.jpg)
 
-[Modelo](https://www.thingiverse.com/thing:2485063)
+[Modelo de célula animal](https://www.thingiverse.com/thing:2485063)
 
-[Propuestas de usos educativos de la impresión 3D](http://www3.gobiernodecanarias.org/medusa/ecoescuela/3d/impresion-3d/como-funciona/propuestas-de-uso-educativo-de-la-impresion-3d/)
+En el ámbito educativo existen excelentes recopilaciones de [Propuestas de usos educativos de la impresión 3D](http://www3.gobiernodecanarias.org/medusa/ecoescuela/3d/impresion-3d/como-funciona/propuestas-de-uso-educativo-de-la-impresion-3d/)
 
 ## Juguetes
 
-[Spinners](https://github.com/javacasm/Spinners)
+También podemos encontrar todo tipo de juguetes para imprimir,  como por ejemplo este proyecto de realización de los conocidos  es [Spinners](https://github.com/javacasm/Spinners),  tan de moda hace unos años. R realizamos este proyecto con el alumnado de bachillerato para aprender conceptos de Física de robótica de tecnología en general y que vieran como ellos mismo podían fabricar sus propios componentes y trabajar con diseños propios en un laboratorio.
 
-![Spinners](https://github.com/javacasm/Spinners/raw/master/images/Montaje_testBench.jpg)
+![Equimo para medición de la velocidad de rotación de Spinners](https://github.com/javacasm/Spinners/raw/master/images/Montaje_testBench.jpg)
 
 
 ## Matemáticas
 
-[Figuras geométricas](https://www.thingiverse.com/javacasm/collections/figuras-geometricas)
+Un campo  qué aplicación ideal para la impresión 3D son las matemáticas dónde podemos imprimir todo tipo de [Figuras geométricas](https://www.thingiverse.com/javacasm/collections/figuras-geometricas) que van a facilitar el aprendizaje de todos los conceptos de la geometría y de muchos campos diferentes.
 
-![Figuras geométricas](https://cdn.thingiverse.com/renders/ca/20/46/b6/76/SAM_0732_preview_card.JPG)
+![Figuras geométricas impresas en 3D](https://cdn.thingiverse.com/renders/ca/20/46/b6/76/SAM_0732_preview_card.JPG)
 
 ## Material de laboratorio
 
-[Material de Laboratorio](https://www.thingiverse.com/javacasm/collections/laboratorio)
+Como ya hemos visto la impresora 3D aparecieron como una forma de facilitar la creación de prototipos.  uno de estos campos más interesantes es la creación de [Material de Laboratorio](https://www.thingiverse.com/javacasm/collections/laboratorio) de bajo coste y sobre todo el tener el total libertad para crear nuestro propio material modificando el que ya existe o adaptándola a nuestras necesidades.
 
 ![pipeta](https://cdn.thingiverse.com/renders/d7/68/6a/35/52/IMG_1752_preview_card.jpg)
 
 ## Química
 
-[Química](https://www.thingiverse.com/javacasm/collections/quimica)
+La [Química](https://www.thingiverse.com/javacasm/collections/quimica)  es un campo dónde podemos aprovechar las capacidades visuales de las piezas impresas en 3D para entender conceptos complejos como puede ser la estructura de las moléculas.
+
 
 ![Epinefrina](https://cdn.thingiverse.com/renders/94/43/04/e5/03/WP_20141007_010_preview_card.jpg)
 
 ## Aplicaciones médicas
 
-[Hospital Marañón](https://twitter.com/hashtag/hospitalmara%C3%B1on3D?src=hash) [[ejemplo]](https://twitter.com/rupermac/status/722907922930380801)
+La posibilidad de diseñar y adaptar elementos ya existentes o crear otros a partir de fotografías,  radiografías  o cualquier otro formato de imagen médico, ha permitido que la impresora 3D se cuele en dentro de los hospitales, facilitando a los médicos la posibilidad de ver en 3D y estudiar antes de realizar una operación el aspecto que van a tener los diferentes partes del paciente con el que van a trabajar, como 
 
-[Impresión 3D en medicina](http://impresiontresde.com/blog/9-aplicaciones-medicas-de-la-impresion-3d/)
+![Ejemplo de impresión de modelo médico](./images/Hospital3D.png)
 
-[Proyecto e-NABLE](http://enablingthefuture.org/)
-[Historia](http://www.imprimalia3d.com/noticias/2014/03/06/001528/pr-tesis-manos-mediante-impresi-n-3d)
+[[ejemplo]](https://twitter.com/rupermac/status/722907922930380801)
 
-![enable](./images/NEWRELOADED.jpg)
-![enable2](./images/ISABELLAARMteam.jpg)
+Otro ejemplo de proyecto extremadamente interesante con aplicaciones médicas en este caso de prótesis, es el [Proyecto e-NABLE](http://enablingthefuture.org/) (por si quieres saber más de su [Historia](http://www.imprimalia3d.com/noticias/2014/03/06/001528/pr-tesis-manos-mediante-impresi-n-3d)) que se encarga de la creación y adaptación de prótesis de brazo especialmente para niño para los que el coste de una prótesis industrial sería prohibitivo dado lo rápido que crecen. Para ello adapta modelo estándar qué prótesis a las medidas concretas de cada uno de los niños imprimiéndolos de forma gratuita. A medida que van creciendo se van haciendo nuevas adaptaciones
+
+
+![Ejemplo del proyecto eNable](./images/NEWRELOADED.jpg)
+
+![Ejemplo del proyecto eNable, esta vez la prótesis de Issabella](./images/ISABELLAARMteam.jpg)
 
 ## Aplicaciones para ingeniería
 
-### Arquitectura
+Otro campo de aplicación natural de la impresión 3D es sin duda el mundo de la ingeniería donde se pueden crear maquetas, modelos a escala y prototipos de todo tipo de equipamiento.
 
-![sydney hardbour bridge](https://c4.staticflickr.com/8/7369/9148811913_5e6288750d_n.jpg)
+Pueden ser el mundo de la *arquitectura* donde se trabaja mucho con maquetas:
 
-* Motores ([diseños](https://github.com/gNSortino/OSREngines))
+![Puente del puerto de Sydney](https://c4.staticflickr.com/8/7369/9148811913_5e6288750d_n.jpg)
 
-![osrEngine](./images/OSREngine.png)
+O en el mundo de la ingeniería mecánica dónde se hacen todo tipo de máquinas Cómo pueden ser los motores, como podemos ver en estos ([diseños](https://github.com/gNSortino/OSREngines))
 
-* Maquetas de máquinas ([modelo](http://www.thingiverse.com/thing:644933))
+![OSR Engine](./images/OSREngine.png)
 
-![toyota](http://thingiverse-production-new.s3.amazonaws.com/renders/09/c5/6c/6e/da/IMG_0848_preview_featured.JPG)
+O maquetas de máquinas ([modelo](http://www.thingiverse.com/thing:644933)) y motores, como esta réplica de un motor real de Toyota
 
-* Modelo de cambio de marchas
+![Motor toyota](./images/motorToyota.jpg)
 
-![cambio automático](http://thingiverse-production-new.s3.amazonaws.com/renders/50/f3/94/7d/20/IMG_0993_preview_featured.JPG)
+o su cambio de marchas
+
+![Modelo de cambio automático](./images/cajaCambiosToyota.jpeg)
 
 [[modelo]](http://www.thingiverse.com/thing:713815)  [[vídeo]](https://www.youtube.com/watch?v=-FyC3dn3HJY)
-* ¿Máquinas de laboratorio open-source? [Medida de resistencia](http://3dprint.com/57992/testrbot-3d-print-testing/)
+
+O para la construcción de prototipos de máquinas de laboratorio  para realizar todo tipo de ensayo como estos de [medida de resistencia de materiales](http://3dprint.com/57992/testrbot-3d-print-testing/) 
+
 ![maquina](http://3dprint.com/wp-content/uploads/2015/04/test.png)
 
 * Turbina de avión
@@ -91,14 +114,9 @@
 
 [[modelo]](http://www.thingiverse.com/thing:114468)    [[vídeo]](https://www.youtube.com/watch?v=6rX4xv5-NvE)
 
+Podemos trabajar y tocar con equipos que en otro caso estarían fuera de nuestro alcance:
+
 ![modelo pequeño de turbina](http://3dprint.com/wp-content/uploads/2014/07/buildyourown5.gif)
 
 [[modelo]](https://www.thingiverse.com/thing:392115)
 
-### Ejemplo: una turbina
-
-Vemos en las noticas que [parte de la turbina de avión es una pieza impresa en titanio](http://www.gereports.com/post/119370423770/jet-engines-with-3d-printed-parts-power-next-gen)
-
-Buscamos [imágenes de modelos de turbinas](https://www.google.es/search?q=thingiverse++turbine&safe=off&espv=2&biw=1920&bih=895&source=lnms&tbm=isch&sa=X&ei=qXVcVbPsKIXwUKX6gKAH&ved=0CAYQ_AUoAQ). Más aún podemos buscar esos modelos [modelos de turbinas](https://www.thingiverse.com/tag:turbine/page:1)
-
-Finalmente vemos un [modelo que nos interesa](http://www.thingiverse.com/thing:76369), [descargamos los modelos](http://www.thingiverse.com/thing:76369/zip)
