--- a/0.3.Tecnologias3D.md
+++ b/0.3.Tecnologias3D.md
@@ -1,5 +1,7 @@
 # Tecnologías de impresión 3D
 
+Existen varias tecnología de impresión 3D vamos a dar un repaso sobre la más utilizada a día de hoy. 
+
 [![Vídeo: 0.2 Tecnologías de impresoras 3D ](https://img.youtube.com/vi/VRNiLtmjmH0/0.jpg)](https://youtu.be/VRNiLtmjmH0)
 
 [Vídeo: 0.2 Tecnologías de impresoras 3D](https://youtu.be/VRNiLtmjmH0)
@@ -7,35 +9,57 @@
 
 ## FDM (FFF)
 
-La tecnología FDM (Fused deposition modeling) estaba protegida por patentes y nació una tecnología que en esencia es similar, o Fused Filament Fabrication (FFF) que hemos visto en impresoras como RepRap
+Esta es la más conocida y de las más utilizadas a día de hoy. Se basa en la fusión de un material que vamos depositando en pequeños hilos hasta formar capas que se van apilando  hasta construir el objeto que queremos obtener.
 
-![FFF](./images/450_1000.png)
+La tecnología FDM (Fused deposition modeling) estaba protegida por patentes y nació una tecnología que en esencia es similar, o Fused Filament Fabrication (FFF) que hemos visto en impresoras como RepRap.
+
+Vamos depositando un material fundido desde el extrusor (1) formando capas con por medio de hilos  del material fundido (2) a medida que vamos moviendo la base (3).  habitualmente la base se mueve en el plano XY y a medida que vamos depositando nuevas capas el extrusor o la base van moviéndose en el eje Z.
+
+![Proceso de Fused Filament Fabrication](./images/450_1000.png)
+
+Son las impresoras más utilizadas a día de hoy puesto que su gran difusión ha conseguido que estén disponibles en el mercado a un precio extremadamente bajo, con una gran facilidad de uso. Su uso universal ha hecho que también el filamento tenga un coste muy reducido.
+
+
+En este curso trataremos solamente de impresoras que utilizan esta tecnología.
 
 ## DLP
 
-DLP (Digital Light Processing) una fuente de luz (similar a un proyector) solidifica una resina fotosensible dependiendo de la cantidad de luz recibida.
+En el tipo de impresoras  DLP (Digital Light Processing) una fuente de luz (similar a un proyector) solidifica una resina fotosensible. El material se solidifica dependiendo de la cantidad de luz recibida.
 
-![dlp](./images/DLP.png)
+La imagen proyectada va generando una capa de resina solidificada (donde hay luz).  Cuando esta capa se ha solidificado subimos la base y se proyecta la siguiente imagen correspondiente a la siguiente capa.
+
+![Esquema de una impresora DLP](./images/DLP.png)
+
+El mecanismo de estas impresoras es mucho más sencillo que el de las anteriores, puesto que solamente necesitan desplazamiento en el eje vertical. La parte encargada de la proyección suele ser algo parecido a un proyector o bien a una pantalla de un móvil que produce una luz de bastante intensidad.
+
+Estas impresoras se están desarrollando bastante en la actualidad y se pueden conseguir a un precio cada vez más bajo.  a día de hoy el principal problema para su difusión es el coste de la resina que sigue siendo elevado más aún cuando está pierde sus propiedades a medida que se utiliza puesto que  no podemos reutilizarla todas las veces que nos gustaría.
 
 ## SLA
 
-SLA (Stereolitografía) Similar a DLP pero la imagen se crea con un láser. Se pueden usar resinas más económicas (el láser es más potente).
+Las impresoras de tecnología SLA (Stereolitografía) son muy similares  a las  DLP pero la imagen se crea con un láser.  Se pueden usar resinas más económicas (el láser es más potente).
 
-![sla](./images/sla.jpg)
+![Tecnología sla](./images/sla.jpg)
+
+Su tecnología es bastante costosa a día de hoy lo que la hace solamente utilizable en el entorno industrial.
 
 ## SLS  
 
-SLS (Selective laser sintering) es similar a SLA per en lugar de una resina usa un material pulverizado.
+SLS (Selective laser sintering) es similar a SLA per en lugar de una resina usa un material pulverizado. Son muy utilizada en muchos entornos industriales como pueden ser la creación de implantes dentales y en entornos hospitalarios e  industriales.
 
-![sls](./images/sls.jpg)
+![Tecnología sls](./images/sls.jpg)
 
 
 ### FDM vs DLP
 
-Actualmente 
+Vamos a comparar los resultados de estas dos tecnologías que a día de hoy son las que están mal alcance de un usuario medio.
+
+Para ello basta con ver las resoluciones (partícula más que pequeña que es capaz de depositar) que actualmente alcanza unas y otras:
+
 
 * FDM va desde 0.5 a 0.127 mm
 * DLP consigue 0.05 a 0.01 mm
+
+En la imagen se ve claramente la diferencia de calidad en el resultado:
 
 ![FDM_vs_DLP](./images/FDM_vs_DLP.jpeg)
 
@@ -43,17 +67,5 @@ FDM 0.2mm vs DLP 0.02mm
 
 ![FDM vs DLP](./images/FDMvsDLP2.png)
 
-
-
-## Recursos
-
-[Tecnologías de impresoras 3D](http://tecnologiadelosplasticos.blogspot.com.es/2013/02/impresion-3d.html):
-
-[Tecnologías de impresión 3D](http://www.xataka.com/perifericos/estas-son-las-tecnologias-de-impresion-3d-que-hay-sobre-la-mesa-y-lo-que-puedes-esperar-de-ellas)
-
-
-[Impresión 3d en wikipedia](http://es.wikipedia.org/wiki/Impresi%C3%B3n_3D)
-
-
-[Tipos de impresoras 3D](http://comohacer.eu/comparativa-impresoras-3d/#Tipos_de_impresion_3D)
+Viendo este resultado nos preguntamos ¿por qué no utilizamos impresoras de tecnología DLP?  aquí hace hoy la principal diferencia el coste del material el filamento nos cuesta aproximadamente unos 20 € por kilo mientras que la resina puede llegar a costarnos más de 100€.  En aquellos mercados en la en los que se puede vender objetos impresos a un alto precio cada vez se utiliza más obviamente la tecnología DLP.
 
