--- a/0.4.ComprarImpresora3d.md
+++ b/0.4.ComprarImpresora3d.md
@@ -7,11 +7,11 @@ Vamos a ver algunos detalles
 
 * **Gama alta**: vamos a encontrar impresoras cerradas, por ejemplo de marca Ultimaker o de  makerbot sí sí que tienen unos precios del orden de los 2000 y pico euros pero una enorme calidad y una gran estabilidad además estamos comprando un producto que tiene un gran soporte y una excelente calidad.
 
-En el rango medio nos encontramos con los equipos de la empresa [Prusa Research](https://www.prusa3d.es/) creada por Joseph Prusa, que no ni más ni menos que el diseñador de esta generación de impresora. El 99% todas las impresoras que ahora se hacen heredan de una forma prácticamente directa de sus diseños. 
-Su impresora, ORIGINAL PRUSA I3
-MK3S+ es considerada como la mejor impresora del mercado para ese rango de precio
+* En el rango medio (en torno a los 1000€) nos encontramos con los equipos de la empresa [Prusa Research](https://www.prusa3d.es/) creada por Josef Prusa, que no ni más ni menos que el diseñador de esta generación de impresoras: el 90% de todas las impresoras que ahora se hacen heredan de una forma prácticamente directa de sus diseños. 
 
-Este fabricante además tiene una enorme vocación opensource licenciando todo su diseño todos sus proyectos como opensource por ejemplo el Prusa Slicer que marca el estándar ahora mismo su desarrollo es completamente libre y gratuito
+Su impresora, ORIGINAL PRUSA I3 MK3S+ es considerada como la mejor impresora del mercado para ese rango de precio.
+
+Este fabricante además tiene una enorme vocación Open Source, licenciando todo su diseño, sus proyectos como opensource. Por ejemplo el software Prusa Slicer de laminado, marca el estándar ahora mismo su desarrollo es completamente libre y gratuito
 
 Si tenemos un presupuesto de 1000 €, yo personalmente preferiría comprar 3 impresora de 300 € antes que una impresora de 1000 €:  en el tiempo en el que nosotros vamos a cambiar de impresora o amortizarla sin ninguna duda será más rentable.
 
@@ -23,15 +23,17 @@ En qué contexto podemos pensar en una impresora de más calidad o bien en algui
 [Vídeo: 0.5 ¿Qué impresora comprar?](https://youtu.be/AFRegfBQCF0)
 
 
+Vamos a ver algunos ejemplos de modelo que a día de hoy tienen una gran fama y un buen precio y que podía ser una compra interesante
+
 ## CREALITY ENDER 3 (160-180eu) 
 
-![Ender 3](./images/Ender3.jpg)
+![Creality Ender 3](./images/Ender3.jpg)
 
 [Videoreview](https://www.youtube.com/watch?v=6LQl-UUEVO8)
 
 ## Geeetech A10 3D Printer (160eu)
 
-![A10](./images/Geeetech-A10.jpg)
+![Geetech A10](./images/Geeetech-A10.jpg)
 
 ## Artillery Genius (250e)
 
@@ -39,16 +41,11 @@ En qué contexto podemos pensar en una impresora de más calidad o bien en algui
 
 ## Anycubics i3 Mega (300€)
 
-![anycubics](./images/Anycubics_i3_Mega.jpg)
-
-[Comparativa de impresoras 3D](http://comohacer.eu/comparativa-impresoras-3d/#Comparativa_de_impresoras_3D)
-
-[Otra comparativa](http://buenosybaratos.es/electronica/impresora-3d/las-mejores-impresoras-3d/)
-
+!Anycubics i3 Mega](./images/Anycubics_i3_Mega.jpg)
 
 ## Kingroon Kp3S
 
-![kingoogKp3S](./images/kingoogKp3S.jpg)
+![kingroon Kp3S](./images/kingoogKp3S.jpg)
 
 Se trata de una impresora compacta, de tamaño aceptable y con una buena área de impresión 180x180, con un "semi" extrusor directo que nos va a evitar tema de atascos si estamos empezando.
 
@@ -109,8 +106,8 @@ Soporta hasta 5 filamentos
 
 ## ¿Nos atrevemos con un kit?
 
-Bq
+Algo a tener en cuenta cuando vamos a comprar una impresora es el tiempo y la complejidad que tiene el montaje muchas de ellas vienen en formato kit lo que quiere decir que tenemos que ir  ensamblando los distintos componentes y conectando los diferentes elementos electrónicos.
+Normalmente el precio de un kit inversamente proporcional a su complejidad de montaje es decir los kits más baratos suelen ser más complejos de montar.
 
-Createc3D
+Antes de comprar un kit debemos asegurarnos de que tiene una buena documentación y de que vamos a tener un soporte técnico en el caso en el que no podamos completar su montaje
 
-## Materiales reciclados
