--- a/0.5.GuiaRapida.md
+++ b/0.5.GuiaRapida.md
@@ -4,7 +4,7 @@
 
 ![proceso impresión](./images/20-best-3d-printing-software-tools-all-are-free.png)
 
-* Descargamos modelo (fichero **STL**) de thinkercad.com o de thingiverse.com
+* Descargamos modelo (fichero **STL**) de Tinkercad.com o de thingiverse.com
 ![DownloadSTL](./images/DownloadSTL.png)
 ![DownloadThingiverse](./images/DownloadThingiverse.png
 )
