--- a/3.7.soportes.md
+++ b/3.7.soportes.md
@@ -6,5 +6,7 @@ Diferente comportamiento del soporte entre PrusaSlicer y Cura
 
 Soportes tipo árbol
 
+Mostrar imagen de cómo se ven desde prusaslicer
+
 
 Cómo retirar los soportes
