--- a/2.1.Filamentos.md
+++ b/2.1.Filamentos.md
@@ -38,12 +38,12 @@ Por el propio funcionamiento de la empresa a veces ocurre que encontramos que en
 ## Precios
 
 Existen multitud de empresas que venden filamento unas con mayor o con menor calidad,  a veces la encontramos a unos precios y a veces a otro. En cualquier caso tenemos de pensar  que una empresa difícilmente va a perder dinero vendiendo un filamento a un precio muy bajo. Cuando encontramos una oferta de filamento a un precio extremadamente bajo con gran probabilidad estamos ante una empresa  qué quiere eliminar un determinado lote de filamento las razones se nos escapan:
-*  puede ser que simplemente quiera eliminar un stock que en ese momento no le interesa almacenar
-*  en otras ocasiones puede ser simplemente una oferta puntual que pretende ganar mercado o popularidad
-*  también puede ocurrir que estemos ante un filamento de baja calidad que la del que se quieren deshacer 
 
+*  Puede ser que simplemente quiera eliminar un stock que en ese momento no le interesa almacenar
+*  En otras ocasiones puede ser simplemente una oferta puntual que pretende ganar mercado o popularidad
+*  También puede ocurrir que estemos ante un filamento de baja calidad que la del que se quieren deshacer 
 
-Características  del filamento
+## Características  del filamento
 
 * El grosor,  que puede ser 2.85/3mm o de 1.75mm
 * El material, por supuesto, lo que nos va dar una temperatura de fusión y de adherencia a la base
@@ -200,3 +200,4 @@ La húmedad es una de las causas más frecuentes de deterioro de los filamentos.
 Muchas fabricante incluyen una bolsa con cierre tipo Zip para guardar los filamentos con más garantías.
 
 Esto no quiere decir que cada noche tengamos que guardar el filamento que no estemos usando, pero sí cuando no lo vayamos a usar durante unos días.
+
